# mvgal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.sh  build.zig  compile_commands.json  meson.build  meson_options.txt  mksrpm.sh  mvgal.spec.backup
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: Makefile  benchmarks.h
build_ci/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build_vulkan/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
cmake/: check_vulkan_1_3.c
config/: 99-mvgal.rules  load-module.sh  mvgal-pkexec-helper.sh  mvgal.conf  org.freedesktop.policykit.mvgal.policy  org.mvgal.MVGAL-GUI.desktop  org.mvgal.MVGAL.conf  org.mvgal.MVGAL.service  unload-module.sh
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_RESEARCH.md  BOOTSTRAP_STATUS_2026-04-21.md  BOOTSTRAP_STATUS_2026-04-26.md  BUILD.md  BUILD_ARTIFACTS.md  BUILDworkspace.md  CHANGES_2025.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  DESIGN.md  DEVELOPER_GUIDE.md  DOCUMENTATION_REVIEW.md  DRIVER_INTEGRATION.md  FINAL_COMPLETION.md  GAMING.md  IMPLEMENTATION_REPORT.md  INSTALL.md  MEMORY.md  MISSING.md  PACKAGING_SUMMARY.md  PROGRESS.md  QUICKSTART.md  README_CUDA_WRAPPER.md  REFERENCE_RESEARCH.md  RESEARCH.md  RUST_DEVELOPMENT.md  SPECIFICATION.md  SPEC_TASK_REPORT.md  STATUS.md  STEAM.md  UPSTREAM_DRIVER_AUDIT.md  USER_GUIDE.md
fedora-42-x86_64/: build.info
fedora-43-x86_64/: build.info
fedora-44-x86_64/: build.info
fedora-rawhide-x86_64/: build.info
gui/: Makefile
kernel/: CMakeLists.txt  Kbuild  Makefile  cmake_install.cmake  mvgal_core.c  mvgal_core.h  mvgal_device.c  mvgal_device.h  mvgal_main.c  mvgal_memory.c  mvgal_memory.h  mvgal_power.c  mvgal_power.h  mvgal_scheduler.c  mvgal_scheduler.h  mvgal_stub.c  mvgal_sync.c  mvgal_sync.h  mvgal_version.h.in
kernel/dkms/: dkms.conf  dkms.conf.in
kernel/tests/: test_mvgal_core.c  test_mvgal_device.c  test_mvgal_memory.c  test_mvgal_power.c  test_mvgal_scheduler.c
kernel/vendors/: mvgal_amd.c  mvgal_amd.h  mvgal_intel.c  mvgal_intel.h  mvgal_mtt.c  mvgal_mtt.h  mvgal_nvidia.c  mvgal_nvidia.h
opengl/: CMakeLists.txt  README.md  mvgal_gl_preload.c
packaging/: 99-mvgal.rules  build_deb.sh  build_package.sh
professional/: README.md  ai_frameworks.md  blender.md  test_blender_render.sh  test_pytorch_multiGPU.py  unreal_engine.md  video_encoding.md
runtime/: CMakeLists.txt  Cargo.toml  Makefile  cmake_install.cmake
runtime/daemon/: daemon.cpp  daemon.hpp  dbus_service.cpp  dbus_service.hpp  device_registry.cpp  device_registry.hpp  ipc_server.cpp  ipc_server.hpp  main.cpp  memory_manager.cpp  memory_manager.hpp  metrics_collector.cpp  metrics_collector.hpp  mvgal-daemon  power_manager.cpp  power_manager.hpp  scheduler.cpp  scheduler.hpp
runtime/safe/: Cargo.toml  capability_model.rs  fence_manager.rs  lib.rs  memory_safety.rs
safe/capability_model/: Cargo.toml
safe/capability_model/src/: lib.rs
safe/fence_manager/: Cargo.toml
safe/fence_manager/src/: lib.rs
safe/ffi_tests/: Cargo.toml
safe/ffi_tests/tests/: ffi_integration.rs
safe/memory_safety/: Cargo.toml
safe/memory_safety/src/: lib.rs
scripts/: install_dependencies.sh  mtt-dkms-installer.sh  test_vulkan_aggregation.sh
src/monitoring/: CMakeLists.txt  mvgal_prometheus.c  mvgal_prometheus.h
src/tests/tests/integration/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_d3d_wrapper.c  test_metal_wrapper.c  test_multi_gpu_validation.c  test_opencl_intercept.c  test_vulkan_layer_submit.c  test_webgpu_intercept.c  test_webgpu_wrapper_synthetic.c
src/userspace/: CMakeLists.txt  Makefile  cmake_install.cmake
src/userspace/api/: mvgal_ai.c  mvgal_api.c  mvgal_log.c
src/userspace/build_userspace/: CMakeCache.txt  Makefile  cmake_install.cmake
src/userspace/core/: mvgal.c  mvgal.h
src/userspace/daemon/: config.c  gpu_manager.c  ipc.c  main.c
src/userspace/execution/: execution.c  execution_internal.h
src/userspace/intercept/cuda/: cuda_wrapper.c
src/userspace/intercept/d3d/: d3d_wrapper.c
src/userspace/intercept/metal/: metal_wrapper.c
src/userspace/intercept/opencl/: cl_intercept.c  cl_intercept.h  cl_platform.c
src/userspace/intercept/vulkan/: manifest.json  manifest.json.in  mvgal_icd.json.in  vk_command.c  vk_device.c  vk_instance.c  vk_layer.c  vk_layer.h  vk_queue.c
src/userspace/intercept/webgpu/: webgpu_wrapper.c
src/userspace/memory/: CMakeLists.txt  allocator.c  coherency.c  dmabuf.c  memory.c  memory_internal.h  sync.c
src/userspace/power/: power_manager.c
src/userspace/scheduler/: load_balancer.c  scheduler.c  scheduler_internal.h  workload_splitter.c
src/userspace/scheduler/strategy/: afr.c  compute_offload.c  hybrid.c  sfr.c  task.c
src/userspace/sycl/: CMakeLists.txt  mvgal_sycl.c
src/userspace/vulkan_icd/: CMakeLists.txt  command_buffer_rewrite.c  device_group.c  icd_entry.c  mvgal_icd.json.in  physical_device.c
steam/: README.md  (+5 more)
test/tests/: CMakeLists.txt
test/tests/integration/: CMakeLists.txt  test_multi_gpu_validation.c
test/tests/unit/: CMakeLists.txt  test_core_api.c  test_execution.c  test_gpu_detection.c
tools/: CMakeLists.txt  Makefile  mvgal-bench.c  mvgal-compat.c  mvgal-config.c  mvgal-info.c  mvgal-status.c  mvgal-steam-setup.c  mvgal.c  mvgal_amd_prototype  mvgal_exporter.go  mvgald_dev_runner
tools/amd_prototype/: CMakeLists.txt  amd_prototype.c  export_import.c
tools/libmvgal/: CMakeLists.txt  mvgal_uapi_wrapper.c
tools/libmvgal/cmake/: ConfigTemplate.cmake
tools/monitor/: CMakeLists.txt  mvgald_dev_runner.c
tools/mvgal-probe/: CMakeLists.txt  mvgal_probe.c
tools/vulkan_pass_through/: CMakeLists.txt  manifest.json.in  mvgal_vulkan_layer.c
ui/: CMakeLists.txt  README.md  mvgal_dashboard.cpp  mvgal_dashboard.h  mvgal_rest_server.go
(+248 files in other folders)
